test/expected/declare_typedef_i_al8.out
declare x as typedef int aligned 64
                         ^
26: error: types can not be aligned
